welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:30: error: ';' expected but 'else' found.
			  else   ( getDirection() == Direction.WEST) {droite() ; avance(); droite() }
                          ^